fix: spacing fixes and z-index increased

--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,8 +1,9 @@
 
 .footer{
     width: 100%;
+    font-size: 12px;
     padding: 20px 0;
-    background-color: var(--header-background-color);
+    background-color: var(--dark);
     color: var(--white);
 }
 
