--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -3,7 +3,6 @@
 header {
     background-color: var(--header-background-color);
     color: white;
-    padding: 10px 0;
     position: fixed;
     width: 100%;
     top: 0;
