--- a/src/components/sidebar/SideBar.css
+++ b/src/components/sidebar/SideBar.css
@@ -6,7 +6,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    z-index: 1;
+    z-index: 2;
     opacity: 0;
     transition: opacity 0.5s ease-in-out;
     pointer-events: none;
@@ -23,7 +23,7 @@
     background-color: var(--white);
     padding: 20px;
     position: fixed;
-    z-index: 2;
+    z-index: 3;
     transform: translateX(-110%); /* Use transform to apply the translation */
     top: 0;
     transition: transform 0.5s ease-in-out; /* Adjust the timing for transition */
