--- a/src/form.css
+++ b/src/form.css
@@ -1,7 +1,7 @@
 /* src/App.css */
 .login-container {
     width: min(60%, 400px);
-    margin: 100px auto;
+    margin: 150px auto;
     padding: 10px 30px;
     border: 1px solid #ccc;
     border-radius: 20px;
